[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = { version = "0.12.1", default-features = false }
dioxus = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus-router = { git = "https://github.com/dioxuslabs/dioxus.git", features = [
    "web",
] }
dioxus-ssr = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus.git" }
include_dir = "0.7.2"
once_cell = "1.9.0"
