[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.0-alpha.0", features = ["web", "router"] }
comrak = { version = "0.12.1", default-features = false }
include_dir = "0.7.2"
once_cell = "1.9.0"
